JumpScript/tests/baselines/reference/arrowFunctionInConstructorArgument1.errors.txt
tests/cases/compiler/arrowFunctionInConstructorArgument1.jump(4,30): error TS2304: Cannot find name 'asdf'.


==== tests/cases/compiler/arrowFunctionInConstructorArgument1.jump (1 errors) ====
    class C {
        constructor(x: () => void) { }
    }
    var c = new C(() => { return asdf; } ) // should error
                                 ~~~~
!!! error TS2304: Cannot find name 'asdf'.
    